cmake_minimum_required(VERSION 4.0)
project(Kattis_Problems)

set(CMAKE_CXX_STANDARD 14)

add_executable(Kattis_Problems
        ALittleLeftoverPizza.cpp
        DeterminingNucleotideAssortments.cpp
        PhotoEncoding.cpp
        DuelOfCards.cpp
        RoadToSavings.cpp
        Connectedness.cpp
        Dijkstras_TopSort_TRYOUT.cpp
        "Labyrinth_CSES.cpp"
        ShortestRoutesII_CSES.cpp
        ShortestRoutesII_CSES.cpp
        FlightDiscount_CSES.cpp
        CourseSchedule_CSES.cpp)
